force-app/main/default/objects/DemoQuestion__c/DemoQuestion__c.object-meta.xml
<CustomObject>
    <label>DemoQuestion</label>
    <nameField>
        <label>DemoQuestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoQuestions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>