force-app/main/default/objects/DemoQuestion__c/fields/DemoCampaign__c.field-meta.xml
<CustomField>
    <fullName>DemoCampaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DemoCampaign</label>
    <referenceTo>DemoCampaign__c</referenceTo>
    <relationshipLabel>DemoQuestions</relationshipLabel>
    <relationshipName>DemoVotings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>