force-app/main/default/objects/DemoQuestion__c/fields/DemoLocation__c.field-meta.xml
<CustomField>
    <fullName>DemoLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DemoLocation</label>
    <referenceTo>DemoLocation__c</referenceTo>
    <relationshipLabel>DemoQuestions</relationshipLabel>
    <relationshipName>DemoQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>