force-app/main/default/objects/DemoQuestion__c/fields/DemoLocName__c.field-meta.xml
<CustomField>
    <fullName>DemoLocName__c</fullName>
    <label>DemoLocName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>